[project]
name = "airbolt-api"

[tool.poetry]
name = "airbolt-api"
version = "0.1.0"
description = ""
authors = ["Chris Carlson <chrispyduck@noreply.github.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbolt_api"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.10.8"}
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pre-commit = "^3.3.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
